src/components/style.scss
// Importing variables
@import "./variables.scss";

// Importing Bulma from node_modules
@import "~bulma/bulma.sass";

.gradientBg {
  display: flex;
  background: $hero-bg;
}

.hero .navbar {
  background: $hero-bg;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer {
  display: flex;
  padding: 1.5rem 1.5rem;
  line-height: 1.5rem;
  a {
    border-bottom: 1px solid;
    color: black;
  }
  a:hover {
    color: $secondary-color;
  }
}

